--- a/index.html
+++ b/index.html
@@ -2,18 +2,12 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>test</title>
+	<title>衣文琦</title>
+	<link rel="stylesheet" type="text/css" href="./stylesheet/main.css">
 </head>
 <body>
-	<div>
-		<p>name</p>
-		<section>
-			<ul>
-				<li>个人简历</li>
-				<li>游戏</li>
-				<li>Github</li>
-			</ul>
-		</section>
-	</div>
+	<ul>
+		<li><a href="resume.html">个人简历</a></li>
+	</ul>
 </body>
 </html>
